--- a/form.html
+++ b/form.html
@@ -18,22 +18,22 @@
         <div class="msg"></div>
         <div>
           <label for="name">Name:</label>
-          <input type="text" id="name" name="username">
+          <input class = "ex" type="text" id="name" name="username">
         </div>
         <div>
           <label for="email">Email:</label>
-          <input type="text" id="email" name="email">
+          <input class = "ex" type="text" id="email" name="email">
         </div>
         <input class="btn" type="submit" value="Submit">
       </form>
 
       <ul id="users"></ul>
 
-      <ul class="items">
+     <!-- <ul class="items">
         <li class="item">Item 1</li>
         <li class="item">Item 2</li>
         <li class="item">Item 3</li>
-      </ul>
+      </ul> -->
     </section>
     
 
