Delete Button added

--- a/form.html
+++ b/form.html
@@ -27,7 +27,7 @@
         <input class="btn" type="submit" value="Submit">
       </form>
 
-      <ul id="users"></ul>
+      <li id="users"></li>
 
      <!-- <ul class="items">
         <li class="item">Item 1</li>
