--- a/index.html
+++ b/index.html
@@ -138,19 +138,27 @@
         event.target.reset();
     }
 
-    window.addEventListener("DOMContentLoaded", () =>{
-        axios.get("https://crudcrud.com/api/02dc3c5efcd44b5ea6efcf9f5e22f529/appoitment")
-        .then((response)=>{
-            console.log(response)
+    window.addEventListener("DOMContentLoaded", () => {
+    axios
+        .get("https://crudcrud.com/api/02dc3c5efcd44b5ea6efcf9f5e22f529/appoitment")
+        .then((response) => {
+            console.log(response);
 
-            for(var i=0; i<response.data.length; i++){
-                displayFormData(response.data[i])
+            // Clear the form data array
+            formDataArray = [];
+
+            // Iterate through the response data
+            for (let i = 0; i < response.data.length; i++) {
+                const formData = response.data[i];
+                formDataArray.push(formData);
+                displayFormData();
             }
         })
-        .catch((error)=>{
-            console.log(error)
-        })
-    })
+        .catch((error) => {
+            console.log(error);
+        });
+});
+
 
     function displayFormData() {
         // Get the container element to display form data
@@ -201,15 +209,29 @@
     }
 
     function deleteFormData(index) {
-        // Remove the form data object from the array at the given index
-        formDataArray.splice(index, 1);
+    // Retrieve the form data object from the array at the given index
+    const formData = formDataArray[index];
 
-        // Store the updated form data array in local storage
-        localStorage.setItem('formDataArray', JSON.stringify(formDataArray));
+    // Retrieve the _id of the form data object
+    const formDataId = formData._id;
 
-        // Display the updated form data on the screen
-        displayFormData();
-    }
+    // Send a DELETE request to remove the data from the server
+    axios
+        .delete(`https://crudcrud.com/api/02dc3c5efcd44b5ea6efcf9f5e22f529/appoitment/${formDataId}`)
+        .then((response) => {
+            console.log(response);
+
+            // Remove the form data object from the array
+            formDataArray.splice(index, 1);
+
+            // Display the updated form data on the screen
+            displayFormData();
+        })
+        .catch((error) => {
+            console.log(error);
+        });
+}
+
 
     // Retrieve form data array from local storage on page load
     const storedFormData = localStorage.getItem('formDataArray');
